[gd_scene load_steps=6 format=3 uid="uid://y4g0aelia2r3"]

<<<<<<< HEAD:Godot/pauseMenu.tscn
[ext_resource type="FontFile" uid="uid://cvpaetv3oobqs" path="res://Assets/Beyblade Metal Fight Font.ttf" id="1_j4dsj"]
[ext_resource type="Script" path="res://pauseMenu.gd" id="1_mg7f2"]
[ext_resource type="Texture2D" uid="uid://d3q26muhubeis" path="res://Assets/Art/MainMenuBG.png" id="2_hpiqw"]
=======
[ext_resource type="Script" path="res://Scripts/Lizzy/pauseMenu.gd" id="1_o3phk"]
[ext_resource type="FontFile" uid="uid://cvpaetv3oobqs" path="res://Assets/Beyblade Metal Fight Font.ttf" id="2_jhyjk"]
>>>>>>> 6fff18f4d1e0fc2ad8497ca3071a8c32bf83a258:Godot/Scenes/StartMenuAndPauseMenu/pauseMenu.tscn

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp6rh"]
bg_color = Color(0.223529, 0.25098, 0.27451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qwek"]
bg_color = Color(0.223529, 0.25098, 0.27451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.372549, 0.803922, 0.894118, 1)

[node name="pasueMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3phk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.004
anchor_bottom = 0.995
offset_left = 417.0
offset_top = 386.0
offset_right = -398.608
offset_bottom = -146.76
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="RButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.372549, 0.803922, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_jhyjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lp6rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qwek")
text = "resume
"

[node name="MMButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.372549, 0.803922, 0.894118, 1)
theme_override_fonts/font = ExtResource("1_j4dsj")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_lp6rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qwek")
text = "return To
Main Menu
"

[node name="Qbutton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.372549, 0.803922, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_jhyjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lp6rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qwek")
text = "Quit
"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hpiqw")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 390.0
offset_top = 177.0
offset_right = 800.0
offset_bottom = 273.0
<<<<<<< HEAD:Godot/pauseMenu.tscn
theme_override_colors/default_color = Color(0.196078, 0.219608, 0.239216, 1)
theme_override_fonts/normal_font = ExtResource("1_j4dsj")
=======
theme_override_fonts/normal_font = ExtResource("2_jhyjk")
>>>>>>> 6fff18f4d1e0fc2ad8497ca3071a8c32bf83a258:Godot/Scenes/StartMenuAndPauseMenu/pauseMenu.tscn
theme_override_font_sizes/normal_font_size = 100
text = "paused"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RButton" to="." method="_on_r_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MMButton" to="." method="_on_mm_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Qbutton" to="." method="_on_button_pressed"]
